content/docs/v1.5/configuration/registries/gar/index.mdx
---
title: "GAR (Google Artifact Registry)"
description: "The gar registry lets you configure Google Artifact Registry integration."
---

import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

The `gar` registry lets you configure [Google Artifact Registry](https://cloud.google.com/artifact-registry) integration for container registries under `*-docker.pkg.dev`.

## Variables

| Env var | Required | Description | Supported values | Default value when missing |
| --- | :---: | --- | --- | --- |
| `DD_REGISTRY_GAR_{REGISTRY_NAME}_CLIENTEMAIL` | ⚪ | Service Account Client Email (required for private images access) | See [Service Account credentials](https://cloud.google.com/iam/docs/keys-create-delete) | |
| `DD_REGISTRY_GAR_{REGISTRY_NAME}_PRIVATEKEY` | ⚪ | Service Account Private Key (required for private images access) | See [Service Account credentials](https://cloud.google.com/iam/docs/keys-create-delete) | |

## Examples

### Configure for authenticated access

<Tabs items={["Docker Compose", "Docker"]}>
<Tab value="Docker Compose">

```yaml
services:
  drydock:
    image: codeswhat/drydock:v1.5.2
    ...
    secrets:
      - gar_private_key
    environment:
      - DD_REGISTRY_GAR_PRIVATE_CLIENTEMAIL=johndoe@myproject.iam.gserviceaccount.com
      - DD_REGISTRY_GAR_PRIVATE_PRIVATEKEY__FILE=/run/secrets/gar_private_key

secrets:
  gar_private_key:
    file: /path/to/gar-private-key.pem
```

</Tab>
<Tab value="Docker">
```bash
docker run \
  -v /path/to/gar-private-key.pem:/run/secrets/gar_private_key:ro \
  -e DD_REGISTRY_GAR_PRIVATE_CLIENTEMAIL="johndoe@myproject.iam.gserviceaccount.com" \
  -e DD_REGISTRY_GAR_PRIVATE_PRIVATEKEY__FILE="/run/secrets/gar_private_key" \
  ...
  codeswhat/drydock:v1.5.2
```
</Tab>
</Tabs>

Keep the private-key file outside the repository, restrict its permissions, and mount it read-only. The `__FILE` suffix loads the value from the mounted secret without placing the PEM in the Compose file, shell history, or container environment metadata.
